Wed Jun  4 18:27:44 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcheckbutton.c (gtk_real_check_button_draw_indicator): 
	gtk/gtkradiobutton.c (gtk_radio_button_draw_indicator): 
	Use GTK_WIDGET_IS_SENSITIVE(), not GTK_WIDGET_SENSITIVE
	(#92548, Tim Evans)

	* gtk/gtkcheckmenuitem.c (gtk_real_check_menu_item_draw_indicator)
	gtk/gtkradiomenuitem.c (gtk_radio_menu_item_draw_indicator): If
	Use state_type = STATE_INSENSITIVE for insensitive menu items.

Wed Jun  4 21:25:35 2003  Kristian Rietveld  <kris@gtk.org>

	Merged from stable.

	* gtk/gtktreeview.c (gtk_tree_view_drag_begin): use a silent
	assert for get_info. (reported by Michael Natterer),
	(gtk_tree_view_expand_all_emission_helper),
	(gtk_tree_view_expand_all_helper): emit row_expanded for all
	expanded rows during an _expand_all operation. (Fixes #111280,
	reported by Benjamin Bayart).

Tue Jun  3 18:32:30 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_wm_protocols_filter): Don't
	respond to pings on a root window; prevents infinite
	loops if we are selecting for SubstructureNotify on the
	root window. (#111945, Sergey V. Udaltsov)

Tue Jun  3 17:39:16 2003  Owen Taylor  <otaylor@redhat.com>

	#71597, reported by Morten Welinder

	* gdk/gdkpixbuf-drawable.c (rgb888amsb): Fix and simplify
	(Patch from Christian Petig)

	* gdk/gdkpixbuf-drawable.c (rgb{555,565}{a,}{msb,lsb}):
	Major rewrite of 555 and 565 conversion routines:

	- Move all the bit shifting into a small block of macros,
	  eliminating much duplication of complicated arithmetic.
	- Get rid of 2-pixels at a time code, which was buggy,
	  hard to maintain, caused unaligned accesses, and
	  probably didn't actually perform any better.
	- Simplify cases where different data types were
	  used for the little and big endian cases, use
	  GUINT16_SWAP_LE_BE() where appropriate.
		
Tue Jun  3 15:05:47 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.c (convert_to_format): Remove